--- a/views/Vlog.ejs
+++ b/views/Vlog.ejs
@@ -13,7 +13,6 @@
 
     <link rel="stylesheet" href="../css/common.css">
     <script src="js/common.js"></script>
-
     <script type="text/javascript">
         window.onload=function(){
 
@@ -28,7 +27,7 @@
     </div>
 </div>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="position: fixed;top: 0;width: 100%">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -64,13 +63,49 @@
 </nav>
 
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+<div id="neck">
 
-        <div class="col-md-2"></div>
+</div>
+
+<div class="container-fluid" id="content">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-9">
+
+                </div>
+                <div class="col-md-3">
+                     <div id="notice">
+                        <div class="noticeHeader glyphicon glyphicon-list-alt">
+                            公示栏
+                        </div>
+                        <div class="noticeBody">
+
+                        </div>
+                    </div>
+
+                    <div id="vlog">
+                        <div class="vlogHeader">
+                            最新一期的vLog
+                        </div>
+                        <video controls="controls" style="width: 100%" class="vlogBody"></video>
+                    </div>
+
+                    <div id="recommend">
+                        <div class="recHeader glyphicon glyphicon-link">
+                            推荐阅读
+                        </div>
+                        <ul class="recBody" style="width: 100%">
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
     </div>
+
 </div>
 </body>
 </html>
