--- a/views/blogdetails.ejs
+++ b/views/blogdetails.ejs
@@ -82,7 +82,7 @@
                         <%-blog.content%>
                     </div>
                     <div class="likeP " style="height: 30px;line-height: 30px;">
-                        <span style="float: left">时间：<%=blog.time%>,<span >作者：<a href="../home/<%=blog.sendername%>"><%=blog.sname%></a></span></span>
+                        <span style="float: left">时间：<%=blog.time%>,<span >作者：<a href="../home/<%=blog.sendername%>"><%=blog.name%></a></span></span>
                     <div class="likeBtn glyphicon glyphicon-heart" id="<%=htn%>"><i class="Lnum"><%=hot%></i></div>
                     </div>
 					
