--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-md-9">
 
-                    <div class="row" style="padding: 0 15px">
+                    <div class="row" style="padding: 0 15px;margin-bottom: 50px">
                         <div class="col-sm-5" style="padding: 0">
                             <div id="recommend">
                                 <div class="recHeader glyphicon glyphicon-link">
