--- a/views/personCenter.ejs
+++ b/views/personCenter.ejs
@@ -101,7 +101,7 @@
                        <!-- userinfo-->
                         <div class="infopanel">
                             <div id="infoC">
-                                <img class="heimg" src="http://wupopo-1256296697.cos.ap-chengdu.myqcloud.com/blog/img/<%= img %>">
+                                <img class="heimg" src="https://wupopo-1256296697.cos.ap-chengdu.myqcloud.com/blog/img/<%= img %>">
                             </div>
                             <div class="info">
                                 <div class="infoT">账号:</div>
