--- a/Public/css/common.css
+++ b/Public/css/common.css
@@ -1,3 +1,6 @@
+body,html{
+    overflow-x: hidden;
+}
 #exit {
     cursor: pointer;
 }
@@ -221,7 +224,7 @@ body {
     background-color: white;
     border-radius: 8px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
       border: 1px solid #ebebeb;
 }
 #recommend{
