--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -96,9 +96,8 @@ body {
     width: 100%;
     min-height: 280px;
     background-color: #fefff9;
-    margin-bottom: 10px;
     border-radius: 8px;
-    margin-top: 20px;
+    margin-bottom: 50px;
     border: 1px solid #ebebeb;
 }
 
@@ -212,7 +211,7 @@ body {
     background-color: white;
     border-radius: 8px;
     border: 1px solid #ebebeb;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     padding-bottom: 10px;
 }
 
@@ -227,5 +226,51 @@ body {
     padding-left: 20px;
     color: #a0a0a0;
 }
+.recBody>li{
+    padding-left: 5px;
+    display: block;
+    width: 100%;
+    height: 35px;
+    line-height: 34px;
+    margin-bottom: 1px;
+    border-radius: 4px;
+}
+.recBody>li:hover{
+     animation: proRotate 1s;
+}
+.recBody>li:nth-child(1){
+     background-color: #0e90d2;
+}
+.recBody>li:nth-child(2){
+     background-color: #a496cb;
+}
+.recBody>li:nth-child(3){
+     background-color: #cb6762;
+ }
+.recBody>li:nth-child(4){
+     background-color: #7dcb63;
+}
+#recommend > ul > li > a {
+    display: block;
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    color: white;
+    text-decoration: none;
+}
+.recHeader{
 
-
+}
+@keyframes proRotate {
+    0% {
+        transform: perspective(400px) rotateX(180deg);
+    }
+    100% {
+        transform: perspective(400px) rotateX(0deg);
+    }
+}
+ #recommend{
+     padding: 0;
+     overflow-x: hidden;
+       background: linear-gradient(90deg, rgba(11, 171, 255, 0.9), #baffff); /* 标准的语法 */
+ }
