--- a/Public/css/blog.css
+++ b/Public/css/blog.css
@@ -173,10 +173,11 @@ body{
 }
 .blogBar{
     padding: 0;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     width: 100%;
     border-radius: 4px;
-    box-shadow: 0 8px 8px #c6c6c6;
+    border-top: 1px solid #eaeaea;
+    box-shadow: 0 8px 10px #bdbdbd;
 }
 .Bar{
     width: 100%;
@@ -190,7 +191,7 @@ body{
     border-radius: 8px 8px 0 0;
     height: 150px;
     line-height: 40px;
-   background: linear-gradient(rgba(255, 255, 255, 0), white);
+   background: linear-gradient(rgba(255, 255, 255, 0.12), white);
     position: relative;
 }
 
@@ -234,19 +235,24 @@ body{
 }
 .senderInfo .title>a{
   color: #404040;
+    font-size: 20px;
 }
 .ti{
     display: block;
-    width: 180px;
+    width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    text-decoration: none;
+}
+.ti:hover{
+    text-decoration: none;
 }
 
 
 .blogCon{
     width: 100%;
-    background-color: white;
+    background-color: #ffffff;
 }
 .blogBar>.blogCon>p{
     padding: 0;
@@ -313,12 +319,13 @@ body{
 #morebtn{
     text-align: center;
     clear: both;
-    height: 30px;
+    height: 40px;
     display: none;
 }
 #morebtn>input{
-    height: 30px;
+    height: 40px;
     width: 100%;
+    font-weight: bolder;
     outline: none;
     border: none;
     opacity: 0.8;
@@ -356,4 +363,27 @@ body{
     border-bottom: 1px solid #44c4d5;
     height: 30px;
     line-height: 30px;
+}
+#Btitle{
+    width: 200px;
+    height: 45px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+}
+#subSe{
+    height: 45px;
+    outline: none;
+    border: none;
+
+}
+
+#subSe option{
+    color: white;
+    background-color: pink;
+    display: block;
+    height: 35px;
+}
+#subSe option:hover{
+    background-color: plum
 }
