--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,12 +31,12 @@
         loading...
     </div>
 </div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" id="nav">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -67,8 +67,12 @@
 <div class="container-fluid" id="content">
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4">
-            <div class="panel panel-default login">
+        <div class="col-md-4" style="text-align: center">
+                        <label for="username">用户名：<input id="username" name="username" type="text" placeholder="请输入你的用户名"></label>
+                        <label for="password">密&nbsp;&nbsp;&nbsp;码：<input id="password" name="password" type="password" placeholder="请输入密码"></label>
+                       <p style="width: 100%;text-align: center"> <input id="btn" name="btn" type="button" value="登录"></p>
+                        <label for="backpwd"><a id="backpwd" style="cursor: pointer">忘记密码</a></label>
+            <!--<div class="panel panel-default login">
                 <div class="panel-heading"><img style="width: 30px" src="img/login.png" alt="">登录<a style="float: right" href="/registered">没有账号？点击注册</a></div>
                 <div class="panel-body">
                     <form class="form1">
@@ -78,7 +82,7 @@
                         <label for="backpwd"><a id="backpwd" style="cursor: pointer">忘记密码</a></label>
                     </form>
                 </div>
-            </div>
+            </div>-->
 
             <div class="panel panel-default back">
                 <div class="panel-heading"><img style="width: 30px" src="img/back.png" alt="">找回密码<button class="backL" style="float: right" >返回登录</button></div>
