--- a/Public/css/admin.css
+++ b/Public/css/admin.css
@@ -968,3 +968,39 @@ ul{
 	background-color: #0b8989;
 	border-radius: 4px;
 }
+
+.subPabel{
+	width: 100%;
+	height: 100%;
+	border: 1px solid rgb(201, 194, 194);
+	border-radius: 4px;
+}
+.addSub{
+	width: 40%;
+	height: 100%;
+	float: left;
+}
+.chkSub{
+	width: 60%;
+	height: 100%;
+	float: left;
+}
+#subname{
+	width: 200px;
+	height: 45px;
+	border: none;
+	outline: none;
+	font-size: 20px;
+}
+.addSub label{
+	display: block;
+}
+.addSubBtn{
+	width: 50px;
+	height: 35px;
+	background: #00a0df;
+	border: none;
+	outline: none;
+	border-radius: 4px;
+	color: white;
+}
