--- a/views/blogdetails.ejs
+++ b/views/blogdetails.ejs
@@ -51,9 +51,10 @@
                 <li class="navbtn"><a href="/Vlog">Vlog</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="navbtn"><a class=" msg" href="<%=url%>"><%=info%></a></li>
-                <li class="navbtn" style="<%=style1%>"><a href="/registered">注册</a></li>
-                <li class="navbtn" style="<%=style%>"><a  id="exit">退出</a></li>
+                <li class="navbtn logined"><a class="msg" href="..."><span class="nav-username"></span><span class="badge"></span></a></li>
+                <li class="navbtn unlogin"><a href="/login">登录</a></li>
+                <li class="navbtn unlogin"><a href="/registered">注册</a></li>
+                <li class="navbtn logined"><a id="exit">退出</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">联系我 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
