--- a/views/registered.ejs
+++ b/views/registered.ejs
@@ -58,7 +58,8 @@
                 <li class="navbtn"><a href="/Vlog">Vlog</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-
+                <li class="navbtn unlogin"><a href="/login">登录</a></li>
+                <li class="navbtn unlogin"><a href="/registered">注册</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">联系我 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
